--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^6.0.0",
     "@supabase/supabase-js": "^2.91.1",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "next": "^14.0.0",
     "react": "^18.2.0",
