--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "next": "^14.0.0",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.14",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
